// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receiptItems.update > functionality > update locked > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:f6ddac04-d233-4e5a-926c-680d1eeae1d5": {
        "locked": true,
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update locked > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:11dfa3bf-8270-4233-8644-efa2066d2e0b": {
        "locked": true,
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update name > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:f6ddac04-d233-4e5a-926c-680d1eeae1d5": {
        "name": "repellat asperiores rerum",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update name > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:11dfa3bf-8270-4233-8644-efa2066d2e0b": {
        "name": "eos ad deleniti",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update price > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:f6ddac04-d233-4e5a-926c-680d1eeae1d5": {
        "price": "998.1600",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update price > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:11dfa3bf-8270-4233-8644-efa2066d2e0b": {
        "price": "180.0700",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update quantity > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:f6ddac04-d233-4e5a-926c-680d1eeae1d5": {
        "quantity": "100.0000",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update quantity > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:11dfa3bf-8270-4233-8644-efa2066d2e0b": {
        "quantity": "18.0000",
      },
    },
  },
}
`;
